--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aniso8601==1.1.0
 click==6.6
+eventlet==0.19.0
 Flask==0.11.1
 Flask-RESTful==0.3.5
 itsdangerous==0.24
@@ -9,5 +10,6 @@ python-dateutil==2.5.3
 python-engineio==1.0.3
 python-socketio==1.6.0
 pytz==2016.7
+redis==2.10.5
 six==1.10.0
 Werkzeug==0.11.11
